--- a/lib/Chess/Position/Macro.pod
+++ b/lib/Chess/Position/Macro.pod
@@ -231,8 +231,43 @@ L-value: no.
 
 =item B<cp_coords_to_shift(FILE, RANK)>
 
-Calculate a bit shift offset for the square that B<FILE> (0-7) and B<RANK>
-(0-7) point to.
+Calculate a bit shift offset (0-63) for the square that B<FILE> (0-7) and
+B<RANK> (0-7) point to.
+
+L-value: no.
+
+=item B<cp_shift_to_coords(SHIFT)>
+
+Calculate the file (0-7) and rank (0-7) for the bit shift offset B<SHIFT>
+(0-63).
+
+L-value: no.
+
+=item B<cp_coords_to_square(FILE, RANK)>
+
+Calculate the square in coordinate notation ("e4", "c5", ...) for
+B<FILE> (0-7) and B<RANK> (0-7).
+
+L-value: no.
+
+=item B<cp_square_to_coords(SQUARE)>
+
+Calculate the file (0-7) and rank (0-7) for the B<SQUARE> in coordinate
+notation ("e4", "c5", ...).
+
+L-value: no.
+
+=item B<cp_square_to_shift(SQUARE)>
+
+Calculate the bit shift offset (0-63) for the B<SQUARE> in coordinate
+notation ("e4", "c5", ...).
+
+L-value: no.
+
+=item B<cp_shift_to_square(SHIFT)>
+
+Calculate the square in coordinate notation ("e4", "c5", ...) for the bit shift
+offset B<SHIFT> (0-63).
 
 L-value: no.
 
