--- a/lib/Chess/Position/Macro.pod
+++ b/lib/Chess/Position/Macro.pod
@@ -11,8 +11,8 @@ Chess::Position::Macro - Macros/inline functions for Chess::Position
     my $bitboard = '0x8080808080808080';
     my $popcount;
 
-    cp_popcount $bitboard, $popcount;
-    cp_popcount($bitboard, $popcount); # You can also use parentheses ...
+    cp_bb_popcount $bitboard, $popcount;
+    cp_bb_popcount($bitboard, $popcount); # You can also use parentheses ...
 
     print "There are $popcount bits set in $bitboard.\n";
 
@@ -217,9 +217,17 @@ L-value: no.
 
 =over 4
 
-=item B<cp_popcount(BITBOARD, COUNT)>
+=item B<cp_bb_popcount(BITBOARD, COUNT)>
 
 Count the number of bits set in B<BITBOARD> and save it in B<COUNT>.
+
+L-value: no.
+
+=item B<cp_bb_clear_but_least_set(BITBOARD)>
+
+Clear all bits but the least significant one in B<BITBOARD>.
+
+Important! This works only under the "use integer" pragma!
 
 L-value: no.
 
